Try to fix bogus underflow test (obvious copy & pasto) - someone please review to make sure I got it right. This fixes PR 47834.